--- a/MySite/public/css/styles.css
+++ b/MySite/public/css/styles.css
@@ -93,7 +93,7 @@ section {
 }
 
 .home-content h3 {
-  font-size: 3.2rem;
+  font-size: 6.2rem;
   font-weight: 700;
 }
 
@@ -102,12 +102,26 @@ section {
 }
 
 .home-content h1 {
-  font-size: 5.6rem;
+  font-size: 3.6rem;
   font-weight: 700;
   height: 1.6;
 }
+.home-content p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.6rem;
+    margin: 2rem 0 3rem;
+    color: var(--third-color); /* Change the text color */
+    line-height: 1.5; /* Improve readability */
+    text-align: justify; /* Align the text */
+  }
+
 span{
   color:var(--main-color);
+  
+}
+span a{
+  color:var(--main-color);
+  text-decoration: none;
 }
 /* Styling for .social-media links */
 .social-media a {
